- added new components

--- a/reactProject/index.html
+++ b/reactProject/index.html
@@ -8,7 +8,7 @@
     body{
       margin: 10px;
       background: #3498db;
-      color: #fff;
+      color: #000;
     }
 
     .filter-list {
@@ -17,11 +17,17 @@
       border-radius: 5px;
       border: 1px solid #fff;
     }
+
+    button{
+      margin: 5px;
+    }
   </style>
 </head>
 
 <body>
+  <div id="mount-point-intro"></div>
   <div id="mount-point-message"></div>
+  <div id="mount-point-es6"></div>
   <div id="mount-point-counter"></div>
   <div id="mount-point-filteredList"></div>
   <script src="build/app.js"></script>
