--- a/reactProject/index.html
+++ b/reactProject/index.html
@@ -14,8 +14,6 @@
     .filter-list {
       margin: 10px 0;
       width: 300px;
-      border-radius: 5px;
-      border: 1px solid #fff;
     }
 
     button{
@@ -27,9 +25,9 @@
 <body>
   <div id="mount-point-intro"></div>
   <div id="mount-point-message"></div>
-  <div id="mount-point-es6"></div>
   <div id="mount-point-counter"></div>
   <div id="mount-point-filteredList"></div>
+  <div id="mount-point-filteredServerList"></div>
   <script src="build/app.js"></script>
 </body>
 
