--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <div id="mountNode"></div>
+  <script src="//cdn.socket.io/socket.io-1.4.5.js"></script>
   <script type="text/babel" src="/build/app.js"></script>
 </body>
 
